--- a/HealthParse/HealthParse.csproj
+++ b/HealthParse/HealthParse.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HealthParse.Core\HealthParse.Core.csproj" />
+  </ItemGroup>
+
 </Project>
