move core to standard, move emails to be stored in storage instead of relying on queue

--- a/HealthParse/HealthParse.csproj
+++ b/HealthParse/HealthParse.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HealthParse.Core\HealthParse.Core.csproj" />
+    <ProjectReference Include="..\HealthParse.Standard\HealthParse.Standard.csproj" />
   </ItemGroup>
 
 </Project>
