--- a/HealthParse-Functions/HealthParse-Functions.csproj
+++ b/HealthParse-Functions/HealthParse-Functions.csproj
@@ -4,7 +4,12 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.0.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.6" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HealthParse.Standard\HealthParse.Standard.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
