--- a/HealthParse.Standard/HealthParse.Standard.csproj
+++ b/HealthParse.Standard/HealthParse.Standard.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="4.1.1" />
     <PackageReference Include="MailKit" Version="2.0.1" />
   </ItemGroup>
 
