--- a/HealthParse.Standard/HealthParse.Standard.csproj
+++ b/HealthParse.Standard/HealthParse.Standard.csproj
@@ -9,4 +9,13 @@
     <PackageReference Include="MailKit" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.WindowsAzure.Storage">
+      <HintPath>..\..\..\.nuget\packages\windowsazure.storage\8.3.0\lib\netstandard1.3\Microsoft.WindowsAzure.Storage.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\.nuget\packages\newtonsoft.json\10.0.3\lib\netstandard1.3\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
