--- a/HealthParse.Standard/HealthParse.Standard.csproj
+++ b/HealthParse.Standard/HealthParse.Standard.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="4.1.1" />
     <PackageReference Include="MailKit" Version="2.0.1" />
+    <PackageReference Include="NodaTime" Version="2.2.4" />
   </ItemGroup>
 
   <ItemGroup>
