--- a/HealthParse.Standard/HealthParse.Standard.csproj
+++ b/HealthParse.Standard/HealthParse.Standard.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="EPPlus" Version="4.1.1" />
     <PackageReference Include="MailKit" Version="2.0.1" />
     <PackageReference Include="NodaTime" Version="2.2.4" />
+    <PackageReference Include="UnitsNet" Version="3.89.0" />
   </ItemGroup>
 
   <ItemGroup>
