--- a/HealthParse.Standard/HealthParse.Standard.csproj
+++ b/HealthParse.Standard/HealthParse.Standard.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EPPlus" Version="4.1.1" />
-    <PackageReference Include="MailKit" Version="2.0.1" />
-    <PackageReference Include="NodaTime" Version="2.2.4" />
+    <PackageReference Include="EPPlus" Version="4.5.3.2" />
+    <PackageReference Include="MailKit" Version="2.2.0" />
+    <PackageReference Include="NodaTime" Version="2.4.6" />
     <PackageReference Include="UnitsNet" Version="3.89.0" />
   </ItemGroup>
 
